[package]
name = "lightning-node"
version = "0.1.0"
edition = "2021"

[dependencies]
lightning-application.workspace = true
lightning-interfaces = { path = "../interfaces" }
lightning-pool.workspace = true
lightning-rpc.workspace = true
lightning-utils.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thread-local-panic-hook = "0.1.0"
lightning-workspace-hack.workspace = true
