[package]
name = "atomo-merklized"
edition.workspace = true

[dependencies]
anyhow.workspace = true
atomo.workspace = true
fxhash.workspace = true
hex.workspace = true
jmt = "0.10.0"
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
atomo-merklized-jmt = { path = "../atomo-merklized-jmt" }
blake3.workspace = true
