[package]
name = "atomo-merklized"
edition.workspace = true

[dependencies]
anyhow.workspace = true
atomo.workspace = true
fxhash.workspace = true
hex.workspace = true
ics23.workspace = true
jmt = "0.10.0"
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tiny-keccak.workspace = true
log = { version = "0.4.22", features = ["kv"] }
digest = "0.10.7"

[dev-dependencies]
atomo-merklized-jmt = { path = "../atomo-merklized-jmt" }
blake3.workspace = true
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
sha2 = "0.10.8"
