[package]
name = "atomo-merklized"
edition.workspace = true

[dependencies]
anyhow.workspace = true
atomo.workspace = true
digest = "0.10.7"
hex.workspace = true
ics23.workspace = true
log = { version = "0.4.22", features = ["kv"] }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
atomo-merklized-jmt = { path = "../atomo-merklized-jmt" }
atomo-rocks.workspace = true
blake3.workspace = true
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
jmt = "0.10.0"
sha2 = "0.10.8"
tempfile.workspace = true
