[package]
name = "merklize-tests"
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake3 = { version = "1.5", optional = true }
digest = "0.10.7"
fxhash = { version = "0.2", optional = true }
futures.workspace = true
hex.workspace = true
ics23.workspace = true
jmt = { git = "https://github.com/snormore/jmt.git", rev = "fa3d97d130febf0b6df6bf3908de6dc80662a136", features = [
    "ics23",
], optional = true }
lru = { version = "0.12.3", optional = true }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2 = { version = "0.10.8", optional = true }
tempfile.workspace = true
tiny-keccak = { version = "2.0.2", features = ["keccak"], optional = true }
tracing.workspace = true
tokio.workspace = true

# Tracing and open telemetry dependencies
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry_sdk = { version = "0.24.1", features = ["tokio", "rt-tokio"] }
tracing-opentelemetry = "0.25.0"
tracing-subscriber.workspace = true

# Lightning dependencies
atomo.workspace = true
atomo-rocks.workspace = true
fleek-crypto.workspace = true
hp-fixed.workspace = true
ink-quill.workspace = true
lightning-application.workspace = true
lightning-interfaces.workspace = true
lightning-test-utils.workspace = true
lightning-types.workspace = true
merklize = { path = "../merklize" }
resolved-pathbuf.workspace = true
