[package]
name = "merklized-jmt"
edition.workspace = true

[dependencies]
anyhow.workspace = true
atomo.workspace = true
digest = "0.10.7"
fxhash.workspace = true
ics23.workspace = true
jmt = { version = "0.10.0", features = ["ics23"] }
log = { version = "0.4.22", features = ["kv"] }
lru.workspace = true
merklized = { path = "../merklized" }
serde.workspace = true
