[package]
name = "merklized"
edition.workspace = true

[dependencies]
anyhow.workspace = true
atomo.workspace = true
blake3 = { version = "1.5", optional = true }
digest = "0.10.7"
fxhash = { version = "0.2", optional = true }
hex.workspace = true
ics23.workspace = true
jmt = { git = "https://github.com/snormore/jmt.git", rev = "fa3d97d130febf0b6df6bf3908de6dc80662a136", features = [
    "ics23",
], optional = true }
lru = { version = "0.12.3", optional = true }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2 = { version = "0.10.8", optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"], optional = true }
tracing.workspace = true

[dev-dependencies]
atomo-rocks.workspace = true
opentelemetry = { version = "0.23.0" }
opentelemetry-otlp = { version = "0.16.0" }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["tokio", "rt-tokio"] }
rand.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-opentelemetry = "0.24.0"
tracing-subscriber.workspace = true

[features]
default = ["hashers", "strategies"]
hashers = ["hasher-sha2", "hasher-keccak", "hasher-blake3"]
strategies = ["strategy-jmt"]

hasher-blake3 = ["dep:blake3"]                      # Compile with blake3 hashers
hasher-sha2 = ["dep:sha2"]                          # Compile with sha2/sha2 hashers
hasher-keccak = ["dep:tiny-keccak"]                 # Compile with keccak hashers
strategy-jmt = ["dep:fxhash", "dep:jmt", "dep:lru"] # Compile with JMT strategy
