[package]
name = "merklized"
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake3 = { version = "1.5", optional = true }
digest = "0.10.7"
fxhash = { version = "0.2", optional = true }
hex.workspace = true
ics23.workspace = true
jmt = { git = "https://github.com/snormore/jmt.git", rev = "fa3d97d130febf0b6df6bf3908de6dc80662a136", features = [
    "ics23",
], optional = true }
lru = { version = "0.12.3", optional = true }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2 = { version = "0.10.8", optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"], optional = true }
tracing.workspace = true

# Lightning dependencies
atomo.workspace = true

[dev-dependencies]
futures.workspace = true
rand.workspace = true
tempfile.workspace = true
tokio.workspace = true

# Tracing and open telemetry dependencies (dev)
opentelemetry = { version = "0.24.0" }
opentelemetry-otlp = { version = "0.17.0" }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry_sdk = { version = "0.24.1", features = ["tokio", "rt-tokio"] }
tracing-opentelemetry = "0.25.0"
tracing-subscriber.workspace = true

# Lightning dependencies (dev)
atomo-rocks.workspace = true
fleek-crypto.workspace = true
hp-fixed.workspace = true
ink-quill.workspace = true
lightning-application.workspace = true
lightning-interfaces.workspace = true
lightning-test-utils.workspace = true
lightning-types.workspace = true
resolved-pathbuf.workspace = true

[features]
default = ["hashers", "strategies"]
hashers = ["hasher-sha2", "hasher-keccak", "hasher-blake3"]
strategies = ["strategy-jmt"]

hasher-blake3 = ["dep:blake3"]                      # Compile with blake3 hashers
hasher-sha2 = ["dep:sha2"]                          # Compile with sha2/sha2 hashers
hasher-keccak = ["dep:tiny-keccak"]                 # Compile with keccak hashers
strategy-jmt = ["dep:fxhash", "dep:jmt", "dep:lru"] # Compile with JMT strategy
